syntax = "proto3";

message ComplexMessage {
    DummyMessage one_dummy = 1;
    repeated DummyMessage multiple_dummy = 2;
}

message DummyMessage{
    int32 id = 1;
    string name = 2;
}